# telegram-bot-style-transfer

./: Dockerfile  README.md  app.py  pyproject.toml
arbitrary_style_transfer/: style_transfer.py
cartoon_gan/: cartoonize.py
fast_style_transfer/: evaluate.py  transform.py  utils.py
